<resources>
    <string name="app_name">Assignment2</string>
    <string name="mp3_player_title">MP3 Player</string>
    <string name="alarm_clock_title">Alarm Clock</string>
    <string name="alarm_clock_set_alarm_btn_title">Set Alarm</string>
    <string name="alarm_clock_cancel_alarm_btn_title">Cancel</string>
    <string-array name="alarm_clock_hours_list">
        <item>HH</item>
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="alarm_clock_minutes_list">
        <item>MM</item>
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>51</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="my_countries_preference_title">My Countries Preferences</string>
    <string name="my_countries_preference_activity_header_title">Settings</string>
    <string name="my_countries_preference_activity_header_summary">UI Preferences</string>
    <string name="my_countries_preference_fragment_background_title">Background</string>
    <string name="my_countries_preference_fragment_background_summary">Select Background</string>
    <string name="my_countries_preference_fragment_default_background">Transparent</string>
    <string-array name="my_countries_preference_fragment_backgrounds_list">
        <item>White</item>
        <item>Yellow</item>
        <item>Transparent</item>
    </string-array>
    <string name="my_countries_preference_fragment_font_size_title">Font Size</string>
    <string name="my_countries_preference_fragment_font_size_summary">Select Font Size</string>
    <string name="my_countries_preference_fragment_default_font_size">20</string>
    <string-array name="my_countries_preference_fragment_font_sizes_list">
        <item>20</item>
        <item>30</item>
        <item>40</item>
    </string-array>
    <string name="my_countries_preference_fragment_font_style_title">Font Style</string>
    <string name="my_countries_preference_fragment_font_style_summary">Select Font Style</string>
    <string name="my_countries_preference_fragment_default_font_style">Normal</string>
    <string-array name="my_countries_preference_fragment_font_style_list">
        <item>Bold</item>
        <item>Italic</item>
        <item>Bold Italic</item>
        <item>Normal</item>
    </string-array>
    <string name="my_countries_title">My Countries</string>
    <string name="my_countries_menu_item_add_country">Add Country</string>
    <string name="my_countries_menu_item_by_year_asc">By Year (ASC)</string>
    <string name="my_countries_menu_item_by_year_desc">By Year (DESC)</string>
    <string name="my_countries_menu_item_by_country_asc">By Country (ASC)</string>
    <string name="my_countries_menu_item_by_country_desc">By Country (DESC)</string>
    <string name="add_country_title">Add Country</string>
    <string name="add_country_add_btn_title">Add</string>
</resources>